2002-06-18  Dave Brolley  <brolley@redhat.com>

	* cpu/frv.cpu: New cpu description.
	* cpu/frv.opc: New cpu support code.

2002-05-21  Dave Brolley  <brolley@redhat.com>

	* decode.scm (-opcode-slots): Don't consider bits beyond the length of
	the insn.

2002-05-17  Johan Rydberg  <jrydberg@rtmk.org>

	* cpu/powerpc.cpu: New file.

2002-05-01  Graydon Hoare  <graydon@redhat.com>

	* desc-cpu.scm (@arch@_cgen_cpu_close): Fix memory leaks.

2002-03-20  Hans-Peter Nilsson  <hp@axis.com>

	* doc/pmacros.texi (Symbol concatenation): Mention that .sym
	results are expanded recursively.

2002-03-19  Hans-Peter Nilsson  <hp@axis.com>

	* pmacros.scm (-pmacro-expand,scan): If result is a symbol,
	call scan-symbol on it, to enable recursive macro-expansion.

2002-01-25  Frank Ch. Eigler  <fche@redhat.com>

	* sid-cpu.scm (-gen-hardware-types): Generate single hardware union
	for multiple-isa configurations.
	* sid-decode.scm (-gen-decode-fn): Tolerate empty insn list.

2002-02-04  Ben Elliston  <bje@redhat.com>

	* cpu/sh.cpu, cpu/sh.opc: New files.
	* cpu/sh64-comact.cpu, cpu/sh64-media.cpu: Likewise.

2002-01-29  Hans-Peter Nilsson  <hp@axis.com>

	* doc/rtl.texi: Fix typo: define-attr, not define-attribute.
	(Enumerated constants): Mention that an ifield must not specify a
	multi-ifield.
	(Instruction operands): Ditto for index.
	(Expressions) <parallel>: Remove misplaced mention of local
	variables.
	<if>: Mention that mode must be specified and non-VOID when the
	result is used.

2002-01-28  Hans-Peter Nilsson  <hp@axis.com>

	* doc/porting.texi: When referring to *.opc, mention they are in
	the cpu subdir.  Call top-level directory toplevel, not devo.
	Close string in define-normal-insn example.

	* doc/pmacros.texi: Fix .substr typo to .substring.
	Mention that .sym expansions are not further expanded.

2002-01-22  Graydon Hoare  <graydon@redhat.com>

	* desc-cpu.scm (ifld-number-cache): Add.
	(ifld-number): Add.
	(gen-maybe-multi-ifld-of-op): Add.