@@ -1,3 +1,8 @@
+2002-06-20  Hans-Peter Nilsson  <hp@axis.com>
+
+	* sim-cpu.scm (gen-semantic-code): Prepend with setup-semantics
+	code.
+
 2002-06-18  Dave Brolley  <brolley@redhat.com>
 
 	* cpu/frv.cpu: New cpu description.
